--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 node_modules
 .pnp
 .pnp.js
+.pnpm-store/
 
 # Local env files
 .env
@@ -32,6 +33,7 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Misc
 .DS_Store
@@ -50,5 +52,6 @@ yarn-error.log*
 # sst
 .sst
 
-#package-lock
+#package-lock and pnpm-lock
 package-lock.json
+pnpm-lock.yaml
