--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:20-alpine AS base
 
+# Install pnpm
+RUN npm install -g pnpm
+
 FROM base AS builder
 
 RUN apk update
@@ -8,25 +11,27 @@ RUN apk add --no-cache libc6-compat bash curl
 WORKDIR /app
 
 # Install turbo globally
-RUN npm install -g turbo
+RUN pnpm install -g turbo
 COPY . .
 RUN turbo prune @workspace/server --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
+
 RUN apk update
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies
 COPY --from=builder /app/out/json/ .
-RUN npm install
+# Use --no-frozen-lockfile to ensure pnpm can resolve workspace dependencies properly
+RUN pnpm install --no-frozen-lockfile
 
 # Build the project
 COPY --from=builder /app/out/full/ .
 
 # Build the server and its dependencies
-RUN npx turbo build --filter=@workspace/server
+RUN pnpm turbo build --filter=@workspace/server
 
 FROM base AS runner
 WORKDIR /app
