--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,22 +30,24 @@
     "./schema": "./src/schema/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.772.0",
+    "@aws-sdk/s3-request-presigner": "^3.772.0",
+    "@hono/node-server": "^1.13.8",
+    "@hono/swagger-ui": "^0.5.1",
+    "@hono/zod-openapi": "0.19.2",
+    "@hono/zod-validator": "^0.4.3",
+    "@scalar/hono-api-reference": "^0.5.172",
     "@workspace/database": "*",
     "@workspace/eslint-config": "*",
     "@workspace/typescript-config": "*",
-    "@aws-sdk/client-s3": "^3.772.0",
-    "@aws-sdk/s3-request-presigner": "^3.772.0",
-    "hono": "*",
-    "@hono/node-server": "^1.13.8",
-    "@hono/swagger-ui": "^0.5.1",
-    "@hono/zod-openapi": "^0.19.2",
-    "@hono/zod-validator": "^0.4.3",
-    "hono-openapi": "^0.4.6",
-    "hono-pino": "^0.8.0",
-    "@scalar/hono-api-reference": "^0.5.172",
     "bcryptjs": "^3.0.2",
+    "dotenv": "*",
+    "dotenv-expand": "*",
     "drizzle-orm": "*",
     "drizzle-zod": "*",
+    "hono": "*",
+    "hono-openapi": "^0.4.6",
+    "hono-pino": "^0.8.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
@@ -61,7 +63,7 @@
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
-    "dotenv-cli": "^8.0.0",
+    "dotenv-cli": "*",
     "tsx": "^4.19.2"
   }
 }
