--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -21,13 +21,15 @@
     "@workspace/typescript-config": "*",
     "@workspace/eslint-config": "*",
     "@workspace/server": "*",
+    "@workspace/ui": "*",
     "@workspace/shared": "*",
+    "sonner": "*",
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-form": "^1.2.1",
     "@tanstack/react-query": "*",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "0.456.0",
-    "next": "^15.2.1",
+    "next": "^15.2.5",
     "next-themes": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
@@ -37,9 +39,9 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
-    "@types/react": "^19.0.12",
+    "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "hono": "*",
+    "hono": "^4.7.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "*",
