--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,7 +22,7 @@
 		"@tanstack/react-query": "*"
 	},
 	"devDependencies": {
-		"@types/react": "^19.0.12",
+		"@types/react": "19.0.8",
 		"@types/react-dom": "19.0.3"
 	}
 }
