--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,10 +44,10 @@
 		"motion": "^12.5.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
+		"react-dom": "19.0.0",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dnd-touch-backend": "^16.0.1",
-		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"shadcn": "^2.4.0-canary.11",
 		"sonner": "^1.7.4",
@@ -59,11 +59,10 @@
 		"@tailwindcss/postcss": "^4",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
-		"@types/react": "^19.0.12",
+		"@types/react": "19.0.8",
 		"@types/react-dom": "19.0.3",
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
-		"react": "^19.0.0",
 		"tailwindcss": "^4",
 		"typescript": "*"
 	}
