feat(repo): move workspace/database inside workspace/server as a simple folder

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -7,6 +7,12 @@ SERVER_PORT=4000
 STOREFRONT_HOSTNAME=localhost
 STOREFRONT_PORT=3000
 
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+POSTGRES_DB=tantovale_db
+
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
 EMAIL_VERIFY_TOKEN_SECRET=your_email_token_secret
