--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -18,22 +18,23 @@
     ]
   },
   "dependencies": {
-    "@workspace/typescript-config": "*",
-    "@workspace/eslint-config": "*",
-    "@workspace/server": "*",
-    "@workspace/ui": "*",
-    "@workspace/shared": "*",
-    "sonner": "*",
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-form": "^1.2.1",
     "@tanstack/react-query": "*",
+    "@workspace/eslint-config": "*",
+    "@workspace/server": "*",
+    "@workspace/shared": "*",
+    "@workspace/typescript-config": "*",
+    "@workspace/ui": "*",
     "browser-image-compression": "^2.0.2",
+    "framer-motion": "^12.6.3",
     "lucide-react": "0.456.0",
     "next": "^15.2.5",
     "next-themes": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "*",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
