--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,3 @@
 {
-	"compilerOptions": {
-		"baseUrl": ".",
-		"paths": {
-			"@workspace/server": ["@workspace/server"],
-			"@workspace/storefront": ["@workspace/storefront"],
-			"@workspace/database": ["@workspace/database"],
-			"@workspace/ui": ["@workspace/ui"],
-			"@workspace/shared": ["@workspace/shared"]
-		}
-	}
+	"extends": "@repo/typescript-config/base.json"
 }
