--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,69 +1,77 @@
 {
-  "name": "@workspace/server",
-  "version": "1.0.0",
-  "private": true,
-  "module": "esnext",
-  "type": "module",
-  "scripts": {
-    "dev": "NODE_ENV=development tsx watch src/index.ts",
-    "prebuild": "cd ../../packages/database && npm run build",
-    "build": "NODE_ENV=production rm -rf dist && tsc && tsc-alias",
-    "start": "NODE_ENV=production node ./dist/src/index.js",
-    "typecheck": "npx tsc --noEmit"
-  },
-  "imports": {
-    "#*": [
-      "./src/*.ts"
-    ],
-    "#lib/*": "./src/lib/*.ts",
-    "#mailer/*": "./src/mailer/*.ts",
-    "#routes/*": "./src/routes/*.ts",
-    "#schema": "./src/schema/index.ts",
-    "#schema/*": [
-      "./src/schema/*.ts",
-      "./src/schema/index.ts"
-    ],
-    "#utils/*": "./src/utils/*.ts"
-  },
-  "exports": {
-    "./apiRoutes": "./src/app.ts",
-    "./schema": "./src/schema/index.ts"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.772.0",
-    "@aws-sdk/s3-request-presigner": "^3.772.0",
-    "@hono/node-server": "^1.13.8",
-    "@hono/swagger-ui": "^0.5.1",
-    "@hono/zod-openapi": "0.19.2",
-    "@hono/zod-validator": "^0.4.3",
-    "@scalar/hono-api-reference": "^0.5.172",
-    "@workspace/database": "*",
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "*",
-    "dotenv-expand": "*",
-    "drizzle-orm": "*",
-    "drizzle-zod": "*",
-    "hono": "*",
-    "hono-openapi": "^0.4.6",
-    "hono-pino": "^0.8.0",
-    "nodemailer": "^6.10.0",
-    "pg": "^8.13.1",
-    "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0",
-    "postgres": "^3.4.5",
-    "sharp": "^0.33.5",
-    "stoker": "^1.4.2",
-    "tsc-alias": "^1.8.11",
-    "zod": "*",
-    "zod-openapi": "^4.2.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.11.11",
-    "dotenv-cli": "*",
-    "tsx": "^4.19.2"
-  }
+	"name": "@workspace/server",
+	"version": "1.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "NODE_ENV=development tsx watch src/index.ts",
+		"build": "NODE_ENV=production tsc && tsc-alias",
+		"start": "NODE_ENV=production node ./dist/src/index.js",
+		"db": "npx drizzle-kit",
+		"db:build": "tsx ./src/database/index.ts",
+		"db:check": "npx drizzle-kit check --config ./src/database/drizzle.config.ts",
+		"db:generate": "npx drizzle-kit generate --config ./src/database/drizzle.config.ts",
+		"db:migrate": "npx tsx ./src/database/migrate.ts",
+		"db:push": "npx drizzle-kit push --config ./src/database/drizzle.config.ts",
+		"db:studio": "npx drizzle-kit studio --config ./src/database/drizzle.config.ts",
+		"seed:categories": "npx tsx ./src/database/scripts/seeders/categories/index.ts",
+		"seed:countries": "npx tsx ./src/database/scripts/seeders/countries/index.ts",
+		"seed:users": "npx tsx ./src/database/scripts/seeders/users/index.ts",
+		"typecheck": "npx tsc --noEmit"
+	},
+	"imports": {
+		"#*": [
+			"./src/*.ts"
+		],
+		"#database/*": "./src/database/*.ts",
+		"#lib/*": "./src/lib/*.ts",
+		"#mailer/*": "./src/mailer/*.ts",
+		"#extended_schemas": "./src/extended_schemas/index.ts",
+		"#schema/*": [
+			"./src/schema/*.ts",
+			"./src/schema/index.ts"
+		],
+		"#utils/*": "./src/utils/*.ts"
+	},
+	"exports": {
+		"./apiRoutes": "./src/app.ts",
+		"./extended_schemas": "./src/extended_schemas/index.ts",
+		"./database": "./src/database/schemas/schema.ts"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.772.0",
+		"@aws-sdk/s3-request-presigner": "^3.772.0",
+		"@hono/node-server": "^1.13.8",
+		"@hono/swagger-ui": "^0.5.1",
+		"@hono/zod-openapi": "0.19.2",
+		"@hono/zod-validator": "^0.4.3",
+		"@scalar/hono-api-reference": "^0.5.172",
+		"@workspace/eslint-config": "*",
+		"@workspace/typescript-config": "*",
+		"bcryptjs": "^3.0.2",
+		"drizzle-orm": "*",
+		"drizzle-zod": "*",
+		"dotenv": "*",
+		"dotenv-expand": "*",
+		"hono": "*",
+		"hono-openapi": "^0.4.6",
+		"hono-pino": "^0.8.0",
+		"nodemailer": "^6.10.0",
+		"pg": "^8.13.1",
+		"pino": "^9.6.0",
+		"pino-pretty": "^13.0.0",
+		"postgres": "^3.4.5",
+		"sharp": "^0.33.5",
+		"stoker": "^1.4.2",
+		"tsc-alias": "^1.8.11",
+		"zod": "*",
+		"zod-openapi": "^4.2.3"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.17",
+		"@types/nodemailer": "^6.4.17",
+		"@types/pg": "^8.11.11",
+		"dotenv-cli": "*",
+		"tsx": "^4.19.2"
+	}
 }
