--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:20-alpine AS base
+FROM node:22-alpine AS base
 
 # Install pnpm
 RUN npm install -g pnpm
+# Setup pnpm environment manually
+ENV PNPM_HOME=/root/.local/share/pnpm
+ENV PATH=${PNPM_HOME}:${PATH}
+RUN mkdir -p ${PNPM_HOME}
 
 FROM base AS builder
 
