--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 5432:5432
     env_file:
-      - ./packages/database/.env
+      - ./apps/server/.env
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 5s
