--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "imports": {
     "#*": [
@@ -34,6 +34,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "hono": "*",
     "sonner": "*",
     "zustand": "^5.0.3"
   },
@@ -42,7 +43,6 @@
     "@types/node": "^20",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "hono": "^4.7.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "*",
