--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -21,11 +21,11 @@
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-form": "^1.2.1",
     "@tanstack/react-query": "*",
-    "@workspace/eslint-config": "*",
-    "@workspace/server": "*",
-    "@workspace/shared": "*",
-    "@workspace/typescript-config": "*",
-    "@workspace/ui": "*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/server": "workspace:*",
+    "@workspace/shared": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.6.3",
     "lucide-react": "0.456.0",
