--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,6 +10,7 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
+		"declaration": true,
 		"lib": ["esnext"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx"
