--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,9 +16,9 @@
 		"./hooks/*": "./src/hooks/*.ts"
 	},
 	"dependencies": {
-		"@workspace/eslint-config": "*",
-		"@workspace/typescript-config": "*",
-		"@workspace/shared": "*",
+		"@workspace/eslint-config": "workspace:*",
+		"@workspace/typescript-config": "workspace:*",
+		"@workspace/shared": "workspace:*",
 		"@hookform/resolvers": "^4.1.3",
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
