--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -29,11 +29,11 @@
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.6.3",
     "lucide-react": "0.456.0",
-    "next": "^15.2.5",
+    "next": "^15.3.0",
     "next-themes": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "hono": "*",
     "sonner": "*",
     "zustand": "^5.0.3"
