--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-alpine AS base
+FROM node:22-slim AS base
 
 RUN npm install -g pnpm
 
@@ -20,9 +20,10 @@ WORKDIR /app
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 hono
 
-COPY --from=builder --chown=hono:nodejs /app/node_modules /app/node_modules
-COPY --from=builder --chown=hono:nodejs /app/dist /app/dist
-COPY --from=builder --chown=hono:nodejs /app/package.json /app/package.json
+# Copy only what's needed to run the application
+COPY --from=installer --chown=hono:nodejs /app/node_modules ./node_modules
+COPY --from=installer --chown=hono:nodejs /app/apps/server/dist ./apps/server/dist
+COPY --from=installer --chown=hono:nodejs /app/apps/server/package.json ./apps/server/package.json
 
 USER hono
 EXPOSE 3000
