--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -13,6 +13,8 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 POSTGRES_DB=tantovale_db
 
+STRIPE_SECRET_KEY=
+
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
 EMAIL_VERIFY_TOKEN_SECRET=your_email_token_secret
