--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -62,6 +62,7 @@
 		"postgres": "^3.4.5",
 		"sharp": "^0.33.5",
 		"stoker": "^1.4.2",
+		"stripe": "13.4.0",
 		"tsc-alias": "^1.8.11",
 		"zod": "*",
 		"zod-openapi": "^4.2.3"
