--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -26,24 +26,28 @@
     ]
   },
   "dependencies": {
-    "@workspace/ui": "workspace:*",
-    "@workspace/server": "workspace:*",
-    "@workspace/shared": "workspace:*",
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
     "@edge-runtime/cookies": "^6.0.0",
+    "@stripe/connect-js": "^3.3.21",
+    "@stripe/react-connect-js": "^3.3.21",
     "@tanstack/react-form": "^1.2.1",
     "@tanstack/react-query": "*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/server": "workspace:*",
+    "@workspace/shared": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.6.3",
+    "hono": "*",
     "lucide-react": "0.456.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "hono": "*",
     "sonner": "*",
+    "typescript": "*",
+    "zod": "*",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -52,8 +56,6 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "*",
-    "zod": "*"
+    "tailwindcss": "^3.4.1"
   }
 }
