feat(repo): add order proposal basic to server and storefront

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -35,6 +35,10 @@
 		"./database": {
 			"development": "./src/database/schemas/schema.ts",
 			"default": "./dist/src/database/schemas/schema.js"
+		},
+		"./enumerated_values": {
+			"development": "./src/database/schemas/enumerated_values.ts",
+			"default": "./dist/src/database/schemas/enumerated_values.js"
 		}
 	},
 	"dependencies": {
