--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -14,6 +14,7 @@ DATABASE_PORT=5432
 POSTGRES_DB=tantovale_db
 
 STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
