--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -31,3 +31,7 @@ SMTP_HOST=
 SMTP_PORT=465
 SMTP_USER=
 SMTP_PASS=
+
+# GITHUB ACTIONS WORKFLOW KEYS
+DAILY_ORDER_PROPOSALS_CHECK_SECRET_KEY=
+DAILY_ORDER_CHECK_SECRET_KEY=
