--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -42,40 +42,41 @@
 		}
 	},
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.772.0",
-		"@aws-sdk/s3-request-presigner": "^3.772.0",
-		"@hono/node-server": "^1.13.8",
-		"@hono/swagger-ui": "^0.5.1",
-		"@hono/zod-openapi": "0.19.2",
-		"@hono/zod-validator": "^0.4.3",
-		"@scalar/hono-api-reference": "^0.5.172",
 		"@workspace/eslint-config": "workspace:*",
 		"@workspace/typescript-config": "workspace:*",
+		"@aws-sdk/client-s3": "^3.772.0",
+		"@aws-sdk/s3-request-presigner": "^3.772.0",
+		"@hono/node-server": "^1.14.1",
+		"@hono/swagger-ui": "^0.5.1",
+		"@hono/zod-openapi": "0.19.6",
+		"@hono/zod-validator": "^0.5.0",
+		"@scalar/hono-api-reference": "^0.5.172",
 		"bcryptjs": "^3.0.2",
-		"dotenv": "*",
-		"dotenv-expand": "*",
-		"drizzle-orm": "*",
-		"drizzle-zod": "*",
-		"hono": "*",
-		"hono-openapi": "^0.4.6",
+		"dotenv": "^16.4.7",
+		"dotenv-expand": "^12.0.1",
+		"drizzle-orm": "^0.43.1",
+		"drizzle-kit": "^0.31.1",
+		"drizzle-zod": "^0.7.1",
+		"hono": "^4.7.8",
+		"hono-openapi": "^0.4.8",
 		"hono-pino": "^0.8.0",
-		"nodemailer": "^6.10.0",
+		"nodemailer": "^7.0.3",
 		"pg": "^8.13.1",
 		"pino": "^9.6.0",
 		"pino-pretty": "^13.0.0",
 		"postgres": "^3.4.5",
-		"sharp": "^0.33.5",
+		"sharp": "^0.34.1",
 		"stoker": "^1.4.2",
 		"stripe": "13.4.0",
 		"tsc-alias": "^1.8.11",
-		"zod": "*",
-		"zod-openapi": "^4.2.3"
+		"zod": "^3.24.4",
+		"zod-openapi": "^4.2.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.17",
 		"@types/nodemailer": "^6.4.17",
 		"@types/pg": "^8.11.11",
-		"dotenv-cli": "*",
+		"dotenv-cli": "^8.0.0",
 		"tsx": "^4.19.2",
 		"typescript": "^5.8.3"
 	}
