feat(server): add orders schemas and shipping_price to item

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -13,8 +13,11 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 POSTGRES_DB=tantovale_db
 
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+PAYMENT_PROVIDER_SECRET_KEY=
+PAYMENT_PROVIDER_WEBHOOK_SECRET=
+
+SHIPPING_PROVIDER_SECRET_KEY=
+SHIPPING_PROVIDER_WEBHOOK_SECRET=
 
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
