--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"engines": {
 		"node": ">=22.0.0"
 	},
-	"packageManager": "pnpm@10.0.0",
+	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.758.0",
 		"@aws-sdk/lib-storage": "^3.758.0",
