--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@workspace/typescript-config/react-library.json",
 	"compilerOptions": {
+		"composite": true,
 		"moduleResolution": "bundler",
 		"paths": {
 			"@workspace/ui/*": ["./src/*"],
