feat(repo): adjust drizzle table names

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"lint": "turbo lint",
 		"dev-server": "pnpm run --filter=@workspace/server hono:dev",
 		"dev-storefront": "pnpm run --filter=@workspace/storefront next:dev",
-		"dev-db-push": "pnpm run --filter=@workspace/server db:push",
-		"dev-seed-users": "pnpm run --filter=@workspace/server seed:users",
-		"dev-seed-categories": "pnpm run --filter=@workspace/server seed:categories",
-		"dev-seed-countries": "pnpm run --filter=@workspace/server seed:countries",
+		"db-push": "pnpm run --filter=@workspace/server db:push",
+		"seed-users": "pnpm run --filter=@workspace/server seed:users",
+		"seed-categories": "pnpm run --filter=@workspace/server seed:categories",
+		"seed-countries": "pnpm run --filter=@workspace/server seed:countries",
 		"seed-all": "bash seed-all.sh",
 		"clean-all": "bash clean-project.sh",
 		"prepare": "husky"
