--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -42,8 +42,6 @@
 		}
 	},
 	"dependencies": {
-		"@workspace/eslint-config": "workspace:*",
-		"@workspace/typescript-config": "workspace:*",
 		"@aws-sdk/client-s3": "^3.772.0",
 		"@aws-sdk/s3-request-presigner": "^3.772.0",
 		"@hono/node-server": "^1.14.1",
@@ -51,11 +49,13 @@
 		"@hono/zod-openapi": "0.19.6",
 		"@hono/zod-validator": "^0.5.0",
 		"@scalar/hono-api-reference": "^0.5.172",
+		"@workspace/eslint-config": "workspace:*",
+		"@workspace/typescript-config": "workspace:*",
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^16.4.7",
 		"dotenv-expand": "^12.0.1",
-		"drizzle-orm": "^0.43.1",
 		"drizzle-kit": "^0.31.1",
+		"drizzle-orm": "^0.43.1",
 		"drizzle-zod": "^0.7.1",
 		"hono": "^4.7.8",
 		"hono-openapi": "^0.4.8",
@@ -66,6 +66,7 @@
 		"pino-pretty": "^13.0.0",
 		"postgres": "^3.4.5",
 		"sharp": "^0.34.1",
+		"shippo": "^2.15.0",
 		"stoker": "^1.4.2",
 		"tsc-alias": "^1.8.11",
 		"zod": "^3.24.4",
