--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: pnpm dlx vercel --prod --token $VERCEL_TOKEN
+        run: pnpm dlx vercel --prod --yes --token $VERCEL_TOKEN
         working-directory: apps/storefront
 
   deploy-server:
