fix(repo): kill me 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,10 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.DROPLET_SSH_KEY }}" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
+          echo "${{ secrets.DROPLET_SSH_KEY }}" > ~/.ssh/git_action_deploy_key
+          chmod 600 ~/.ssh/git_action_deploy_key
           eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/deploy_key
+          ssh-add ~/.ssh/git_action_deploy_key
           ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> ~/.ssh/known_hosts
 
       - name: Pull, Build, and Restart on Droplet
