--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -1,6 +1,8 @@
 NODE_ENV=development
 LOG_LEVEL=debug
 
+NEXT_PUBLIC_HONO_API_URL=http://localhost:4000
+
 SERVER_HOSTNAME=localhost
 SERVER_PORT=4000
 
