fix(repo): remove part of the CI

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
-		"clean": "turbo run clean",
 		"dev": "turbo run dev",
+		"clean": "turbo run clean",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"lint": "turbo lint",
-		"dev-server": "pnpm run --filter=@workspace/server hono:dev",
-		"dev-storefront": "pnpm run --filter=@workspace/storefront next:dev",
+		"build-server": "pnpm run --filter=@workspace/server build",
+		"build-storefront": "pnpm run --filter=@workspace/storefront build",
+		"dev-server": "pnpm run --filter=@workspace/server dev",
+		"dev-storefront": "pnpm run --filter=@workspace/storefront dev",
 		"db-push": "pnpm run --filter=@workspace/server db:push",
 		"seed-users": "pnpm run --filter=@workspace/server seed:users",
 		"seed-categories": "pnpm run --filter=@workspace/server seed:categories",
