fix(repo): update package in root

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"lint": "turbo lint",
 		"build-server": "pnpm run --filter=@workspace/server build",
+		"start-server": "pnpm run --filter=@workspace/server start",
 		"build-storefront": "pnpm run --filter=@workspace/storefront build",
+		"start-storefront": "pnpm run --filter=@workspace/storefront start",
 		"dev-server": "pnpm run --filter=@workspace/server dev",
 		"dev-storefront": "pnpm run --filter=@workspace/storefront dev",
 		"db-push": "pnpm run --filter=@workspace/server db:push",
