--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -55,6 +55,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
     "@types/react": "19.0.8",
